# Cerberus

./: .gitignore  GEMINI.md  README.md  build.gradle.kts  collo.py  combined_output.txt  daemon.py  daemon_context.txt  project_context.txt  settings.gradle.kts  tree.py
app/: build.gradle.kts  proguard-rules-disabler.pro  proguard-rules.pro
app/src/androidTest/java/com/crfzit/crfzit/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/lottie/: anim_audio.json  anim_background.json  anim_exempted.json  anim_foreground.json  anim_location.json  anim_network.json
app/src/main/java/com/crfzit/crfzit/: CerberusApp.kt  CerberusApplication.kt  CrfzitApplication.kt  MainActivity.kt  MainScreen.kt
app/src/main/java/com/crfzit/crfzit/coil/: AppIconFetcher.kt
app/src/main/java/com/crfzit/crfzit/data/model/: AppInfo.kt  AppModels.kt  DashboardModels.kt  IPCModels.kt
app/src/main/java/com/crfzit/crfzit/data/repository/: AppInfoRepository.kt  DaemonRepository.kt  DashboardRepository.kt  MockAppRepository.kt  UdsDashboardRepository.kt
app/src/main/java/com/crfzit/crfzit/data/system/: NetworkMonitor.kt
app/src/main/java/com/crfzit/crfzit/data/uds/: TcpClient.kt  UdsClient.kt
app/src/main/java/com/crfzit/crfzit/lsp/: DaemonConnector.kt  ProbeHook.kt
app/src/main/java/com/crfzit/crfzit/navigation/: Screen.kt
app/src/main/java/com/crfzit/crfzit/ui/configuration/: ConfigurationScreen.kt  ConfigurationViewModel.kt
app/src/main/java/com/crfzit/crfzit/ui/dashboard/: DashboardScreen.kt  DashboardViewModel.kt
app/src/main/java/com/crfzit/crfzit/ui/icons/: AppIcons.kt  Icons.kt
app/src/main/java/com/crfzit/crfzit/ui/logs/: LogsScreen.kt  LogsViewModel.kt
app/src/main/java/com/crfzit/crfzit/ui/profiles/: ProfileManagementScreen.kt
app/src/main/java/com/crfzit/crfzit/ui/settings/: SettingsModels.kt  SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/crfzit/crfzit/ui/settings/more/: MoreSettingsScreen.kt  MoreSettingsViewModel.kt  OomRuleModels.kt
app/src/main/java/com/crfzit/crfzit/ui/stats/: StatisticsScreen.kt  StatisticsViewModel.kt
app/src/main/java/com/crfzit/crfzit/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/crfzit/crfzit/util/: ApplicationInfoFetcher.kt
app/src/main/res/drawable/: ic_clone.xml  ic_placeholder_icon.xml
app/src/main/res/values/: arrays.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/com/crfzit/crfzit/: ExampleUnitTest.kt
daemon/: CMakeLists.txt
daemon/cpp/: action_executor.cpp  action_executor.h  adj_mapper.cpp  adj_mapper.h  database_manager.cpp  database_manager.h  logger.cpp  logger.h  main.cpp  main.h  memory_butler.cpp  memory_butler.h  process_monitor.cpp  process_monitor.h  rekernel_client.cpp  rekernel_client.h  state_manager.cpp  state_manager.h  system_monitor.cpp  system_monitor.h  time_series_database.cpp  time_series_database.h  uds_server.cpp  uds_server.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
magisk/: customize.sh  file_contexts  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  uninstall.sh
magisk/tools/: magiskpolicy
